using System;

namespace Open_Closed_Solution;

public class GreetingEn : IGreeting
{
    public void SayHi()
    {
        Console.WriteLine("Hi!");
    }
}
