using System;

namespace Open_Closed_Solution;

public class GreetingNor : IGreeting
{
    public void SayHi()
    {
        Console.WriteLine("Hei!");
    }
}
