using System;

namespace Open_Closed_Solution;

public class GreetingSwe : IGreeting
{
    public void SayHi()
    {
        Console.WriteLine("Hej!");
    }
}
