using System;

namespace Open_Closed_Solution;

public class GreetingVn : IGreeting
{
    public void SayHi()
    {
        Console.WriteLine("Xin chào!");
    }
}
