using System;

namespace Open_Closed_Solution;

public interface IGreeting
{
    void SayHi();
}
