@startuml

interface IGreeting {
    +void SayHi()
}

class GreetingEn {
    +void SayHi()
}

class GreetingNor {
    +void SayHi()
}

class GreetingSwe {
    +void SayHi()
}

class GreetingVn {
    +void SayHi()
}

' Relations between classes
IGreeting <|-- GreetingEn : implements
IGreeting <|-- GreetingNor : implements
IGreeting <|-- GreetingSwe : implements
IGreeting <|-- GreetingVn : implements

note right of IGreeting
Dễ mở rộng: chỉ cần tạo lớp mới kế thừa IGreeting 
khi muốn hỗ trợ thêm ngôn ngữ
endnote

@enduml